# django-flyio

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASING.md  noxfile.py  pyproject.toml
.copier/: package.yml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
docs/: conf.py
src/django_flyio/: __init__.py  db.py  middleware.py  routers.py
tests/: conftest.py  settings.py  test_db.py  test_middleware.py  test_routers.py  test_version.py  urls.py  views.py
